welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: '(' expected but identifier found.
if Color.green {
   ^SlugTracking:10: error: illegal start of simple expression
}
^SlugTracking:14: error: Unmatched closing brace '}' ignored here
}
^